# raytracing

./: .gitignore  CMakeLists.txt  README.md  config.json
build-native/: CMakeCache.txt  Makefile  RayTracer  cmake_install.cmake  image.ppm
build-native/src/rayimage/: Makefile  cmake_install.cmake
build-native/src/raymath/: Makefile  cmake_install.cmake
src/: Main.cpp  SDLGraphics.hpp  camera.hpp  color.hpp  config.json  hittable.hpp  hittable_list.hpp  interval.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
src/Backend/: Graphics.hpp  SDLGraphics.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Color/: Color.cpp  Color.hpp
src/Hittable/: Hittable.cpp  Hittable.hpp  HittableList.hpp
src/HittableList/: HittableList.cpp
src/Interval/: Interval.cpp  Interval.hpp
src/Material/: Lambertian.cpp  Lambertian.hpp  Material.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp  SphereMeshGenerator.cpp  SphereMeshGenerator.hpp  Triangle.cpp  Triangle.hpp
src/Ray/: Ray.cpp  Ray.hpp
src/Rtweekend/: Rtweekend.cpp
src/Sphere/: Sphere.cpp  Sphere.hpp
src/Utils/: Utils.cpp  Utils.hpp
src/Vec3/: Vec3.cpp  Vec3.hpp
src/config/: Config.cpp  Config.hpp
src/lighting/: Light.cpp  Light.hpp
src/math/: Vec3.cpp  Vec3.hpp
src/objects/: Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
src/rayimage/: Image.cpp  Image.hpp
src/raymath/: Color.cpp  Color.hpp
src/raytracer/: Ray.cpp  Ray.hpp  Render.cpp  Render.hpp
src/rendering/: Trace.cpp  Trace.hpp
src/scene/: Scene.cpp  Scene.hpp
src/utils/: Utility.hpp
